# simple-planet-gen

./: .gitignore  CLAUDE.md  README.md  generate.py  pyproject.toml
worldgen/: __init__.py  noise.py  projections.py  viz.py  world.py
worldgen/layers/: __init__.py  biomes.py  circulation.py  elevation.py  lakes.py  land_mask.py  ocean_currents.py  precipitation.py  rivers.py  tectonics.py  temperature.py
